issue and series covers. styling fixes across the site

--- a/src/main/resources/static/css/frontPage_main_styles.css
+++ b/src/main/resources/static/css/frontPage_main_styles.css
@@ -22,5 +22,13 @@ img {
 }
 
 .issue {
-    max-width: 180px;
+     max-width: 180px;
+     max-height: 250px;
+     object-fit: cover;
+ }
+.issue-blank {
+    width: 180px;
+    height: 250px;
+    object-fit: cover;
+    background-color: #9a9a9a;
 }
